# manga-color-translator

./: .gitignore  README.md  erase_text.py  future_work.txt  main.py  pyproject.toml  render_text.py  setup_and_run.ps1  setup_and_run.sh
ui/: manga_color_api_cv_lab.json  server.py
ui/static/: index.html
