[project]
name = "cv-proj"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "manga-ocr>=0.1.14",
    "torchvision>=0.26.0",
    "opencv-python>=4.10.0.84",
    "easyocr>=1.7.2",
    "onnxruntime-gpu>=1.24.4",
    "simple-lama-inpainting>=0.1.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "requests>=2.31.0",
]
